changes on index page

--- a/index.html
+++ b/index.html
@@ -72,9 +72,6 @@
                                 <li class="nav-item active">
                                     <a class="nav-link" href="index.html">Today's Offer<span class="sr-only">(current)</span></a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
-                                </li>
                                 <li class="nav-item active">
                                     <a class="nav-link" href="index.html">About us<span class="sr-only">(current)</span></a>
                                 </li>
@@ -116,7 +113,6 @@
                                 <h6>What are you looking for?</h6>
                                 <form action="#" method="get">
                                     <select class="custom-select">
-                                        <option selected>Locations</option>
                                         <option value="1">Tiruvanamalai</option>
                                     </select>
                                     <select class="custom-select">
@@ -268,7 +264,7 @@
     <!-- ***** About Area End ***** -->
 
     <!-- ***** Editor Pick Area Start ***** -->
-    <section class="dorne-editors-pick-area bg-img bg-overlay-9 section-padding-100" style="background-image: url(img/bg-img/hero-2.jpg);">
+    <section class="dorne-editors-pick-area bg-img bg-overlay-9 section-padding-100" style="background-image: url(img/bg-img/tiru2.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -282,11 +278,24 @@
             <div class="row">
                 <div class="col-12 col-lg-6">
                     <div class="single-editors-pick-area wow fadeInUp" data-wow-delay="0.2s">
-                        <img src="img/bg-img/editor-1.jpg" alt="">
+                        <img src="img/bg-img/hotel image 1.jpg"  alt="">
                         <div class="editors-pick-info">
                             <div class="places-total-destinations d-flex">
-                                <a href="#">New York</a>
-                                <a href="#">1643 Destinations</a>
+                                <a href="#">hotel  name</a>
+                                <!-- <a href="#">1643 Destinations</a> -->
+                            </div>
+                            <div class="add-more">
+                                <a href="#">+</a>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="single-editors-pick-area wow fadeInUp" data-wow-delay="0.6s">
+                        <img src="img/bg-img/resort-exterior.jpg" alt="">
+                        <div class="editors-pick-info">
+                            <div class="places-total-destinations d-flex">
+                                <a href="#">hotel  name</a>
+                                <!-- <a href="#">243 Destinations</a> -->
                             </div>
                             <div class="add-more">
                                 <a href="#">+</a>
@@ -296,11 +305,11 @@
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="single-editors-pick-area wow fadeInUp" data-wow-delay="0.4s">
-                        <img src="img/bg-img/editor-2.jpg" alt="">
+                        <img src="img/bg-img/7.jpg.crdownload" alt="">
                         <div class="editors-pick-info">
                             <div class="places-total-destinations d-flex">
-                                <a href="#">Barcelona</a>
-                                <a href="#">943 Destinations</a>
+                                <a href="#">hotel  name</a>
+                                <!-- <a href="#">943 Destinations</a> -->
                             </div>
                             <div class="add-more">
                                 <a href="#">+</a>
@@ -308,17 +317,18 @@
                         </div>
                     </div>
                     <div class="single-editors-pick-area wow fadeInUp" data-wow-delay="0.6s">
-                        <img src="img/bg-img/editor-3.jpg" alt="">
+                        <img src="img/bg-img/bedroom.jpg" alt="">
                         <div class="editors-pick-info">
                             <div class="places-total-destinations d-flex">
-                                <a href="#">paris</a>
-                                <a href="#">243 Destinations</a>
+                                <a href="#">hotel  name</a>
+                                <!-- <a href="#">243 Destinations</a> -->
                             </div>
                             <div class="add-more">
                                 <a href="#">+</a>
                             </div>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </div>
@@ -343,15 +353,34 @@
                     <div class="features-slides owl-carousel">
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="img/bg-img/feature-1.jpg" alt="">
+                            <img src="img/bg-img/Tiruvannamalai-.jpg" alt="">
                             <!-- Price -->
                             <div class="price-start">
-                                <p>FROM $59/night</p>
+                                <p>Rs:/night</p>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>Ibiza</h5>
-                                    <p>Party</p>
+                                    <h5>hills</h5>
+                                    <!-- <p>Party</p> -->
+                                </div>
+                                <div class="feature-favourite">
+                                    <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Single Features Area -->
+    
+                        <!-- Single Features Area -->
+                        <div class="single-features-area">
+                            <img src="img/bg-img/Tiruvannamalai_Best_Time.jpg" alt="">
+                            <!-- Price -->
+                            <div class="price-start">
+                                <p>Rs:/night</p>
+                            </div>
+                            <div class="feature-content d-flex align-items-center justify-content-between">
+                                <div class="feature-title">
+                                    <h5>Temple</h5>
+                                    <!-- <p>Spectacular</p> -->
                                 </div>
                                 <div class="feature-favourite">
                                     <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -360,15 +389,31 @@
                         </div>
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="img/bg-img/feature-2.jpg" alt="">
+                            <img src="img/bg-img/Generic5.webp" alt="">
                             <!-- Price -->
                             <div class="price-start">
-                                <p>FROM $59/night</p>
+                                <p>Rs:/night</p>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>Paris</h5>
-                                    <p>Luxury</p>
+                                    <h5>hills</h5>
+                                    <!-- <p>Sunny</p> -->
+                                </div>
+                                <div class="feature-favourite">
+                                    <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="single-features-area">
+                            <img src="img/bg-img/first-cascade-very-near.jpg" alt="">
+                            <!-- Price -->
+                            <div class="price-start">
+                                <p>Rs:/night</p>
+                            </div>
+                            <div class="feature-content d-flex align-items-center justify-content-between">
+                                <div class="feature-title">
+                                    <h5>water falls</h5>
+                                    <!-- <p>Luxury</p> -->
                                 </div>
                                 <div class="feature-favourite">
                                     <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -377,49 +422,15 @@
                         </div>
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="img/bg-img/feature-3.jpg" alt="">
+                            <img src="img/bg-img/Tiruvannamalai Temple.jpg.crdownload" alt="">
                             <!-- Price -->
                             <div class="price-start">
-                                <p>FROM $59/night</p>
+                                <p>Rs:/night</p>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>Lake Como</h5>
-                                    <p>Spectacular</p>
-                                </div>
-                                <div class="feature-favourite">
-                                    <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Single Features Area -->
-                        <div class="single-features-area">
-                            <img src="img/bg-img/feature-4.jpg" alt="">
-                            <!-- Price -->
-                            <div class="price-start">
-                                <p>FROM $59/night</p>
-                            </div>
-                            <div class="feature-content d-flex align-items-center justify-content-between">
-                                <div class="feature-title">
-                                    <h5>Greece</h5>
-                                    <p>Sunny</p>
-                                </div>
-                                <div class="feature-favourite">
-                                    <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Single Features Area -->
-                        <div class="single-features-area">
-                            <img src="img/bg-img/feature-5.jpg" alt="">
-                            <!-- Price -->
-                            <div class="price-start">
-                                <p>FROM $59/night</p>
-                            </div>
-                            <div class="feature-content d-flex align-items-center justify-content-between">
-                                <div class="feature-title">
-                                    <h5>Norway</h5>
-                                    <p>All Year round</p>
+                                    <h5>Temple</h5>
+                                    <!-- <p>All Year round</p> -->
                                 </div>
                                 <div class="feature-favourite">
                                     <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -547,7 +558,7 @@
     <!-- ***** Features Restaurant Area End ***** -->
 
     <!-- ***** Features Events Area Start ***** -->
-    <section class="dorne-features-events-area bg-img bg-overlay-9 section-padding-100-50" style="background-image: url(img/bg-img/hero-3.jpg)">
+    <section class="dorne-features-events-area bg-img bg-overlay-9 section-padding-100-50" style="background-image: url(img/bg-img/tiru3.jpg)">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -677,24 +688,6 @@
         </div>
     </section>
     <!-- ***** Features Events Area End ***** -->
-
-    <!-- ***** Clients Area Start ***** -->
-    <div class="dorne-clients-area section-padding-100">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <div class="clients-logo d-md-flex align-items-center justify-content-around">
-                        <img src="img/clients-img/1.png" alt="">
-                        <img src="img/clients-img/2.png" alt="">
-                        <img src="img/clients-img/3.png" alt="">
-                        <img src="img/clients-img/4.png" alt="">
-                        <img src="img/clients-img/5.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- ***** Clients Area End ***** -->
 
     <!-- ****** Footer Area Start ****** -->
     <footer class="dorne-footer-area">
