--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
     <!-- Favicon -->
     <!-- <link rel="icon" href="img/core-img/favicon.ico"> -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Core Stylesheet -->
     <link href="style.css" rel="stylesheet">
 
     <!-- Responsive CSS -->
     <link href="css/responsive/responsive.css" rel="stylesheet">
+    
 
 </head>
 
@@ -168,11 +169,10 @@
                 <span></span>
             </div>
             <div class="social-btns">
-                <a href="#"><i class="fa fa-linkedin" aria-haspopup="true"></i></a>
-                <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
                 <a href="#"><i class="fa fa-twitter" aria-haspopup="true"></i></a>
                 <a href="#"><i class="fa fa-facebook" aria-haspopup="true"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
     </section>
@@ -558,7 +558,7 @@
     <!-- ***** Features Restaurant Area End ***** -->
 
     <!-- ***** Features Events Area Start ***** -->
-    <section class="dorne-features-events-area bg-img bg-overlay-9 section-padding-100-50" style="background-image: url(img/bg-img/tiru3.jpg)">
+    <section class="dorne-features-events-area bg-img  section-padding-100-50" style="background-image: url(img/bg-img/tiru3.jpg)">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -702,11 +702,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                         </p>
                     </div>
                     <div class="footer-social-btns">
-                        <a href="#"><i class="fa fa-linkedin" aria-haspopup="true"></i></a>
-                        <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
                         <a href="#"><i class="fa fa-twitter" aria-haspopup="true"></i></a>
                         <a href="#"><i class="fa fa-facebook" aria-haspopup="true"></i></a>
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
