--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body style="background-image: linear-gradient(to right, #1B1D45, #7F7A8D)">
+<body style="background:linear-gradient(to right, #4b8dca, #7F7A8D);">
     
     <!-- ***** Search Form Area ***** -->
     <div class="dorne-search-form d-flex align-items-center">
@@ -52,28 +52,45 @@
                 <div class="col-12 h-100">
                     <nav class="h-100 navbar navbar-expand-lg">
                         <!-- <a class="navbar-brand" href="index.html"><img src="img/core-img/logo.png" alt=""></a> -->
-                        <a class="navbar-brand" href="index.html"><h4>Y SPOT</h4></a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dorneNav" aria-controls="dorneNav" aria-expanded="false" aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
+                        <a class="navbar-brand" href="index.html">
+                            <h4>Y SPOT</h4>
+                        </a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dorneNav"
+                            aria-controls="dorneNav" aria-expanded="false" aria-label="Toggle navigation"><span
+                                class="fa fa-bars"></span></button>
                         <!-- Nav -->
                         <div class="collapse navbar-collapse" id="dorneNav">
                             <ul class="navbar-nav mr-auto" id="dorneMenu">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="index.html">Home <span
+                                            class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Blog <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="best-stays.html">Stays <span
+                                            class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Holiday's Trip <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="index.html">About us <span
+                                            class="sr-only">(current)</span></a>
                                 </li>
+                                <div class="dropdown">
+                                    <button class="btn  btn-secondary dropdown-toggle" type="button"
+                                        id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                                        aria-expanded="false">
+                                        Reservation <i class="fa-solid fa-caret-down"></i>
+                                    </button>
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                        <a class="dropdown-item" href="#">Hotels</a>
+                                        <a class="dropdown-item" href="#"> Restaurant</a>
+                                        <a class="dropdown-item" href="#">Tour & Travels</a>
+                                        <a class="dropdown-item" href="#">Events</a>
+                                        <a class="dropdown-item" href="#">Destinations</a>
+                                    </div>
+                                </div>
+
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="best-stays.html">Best Stays<span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Today's Offer<span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="contact.html">Contact us<span
+                                            class="sr-only">(current)</span></a>
                                 </li>
                             </ul>
                             <!-- Add listings btn -->
@@ -115,7 +132,7 @@
         <!-- Map Area -->
         <div class="contact-form">
             <div class="contact-form-title">
-                <h6>Contact Business</h6>
+                <h6 style="color: white;">Contact Business</h6>
             </div>
             <form action="#">
                 <div class="row">
@@ -132,8 +149,8 @@
                         <textarea name="message" class="form-control" id="Message" cols="30" rows="10"
                             placeholder="Your Message"></textarea>
                     </div>
-                    <div class="col-12">
-                        <button type="submit" class="btn dorne-btn">Send</button>
+                    <div class="col-12 text-center">
+                        <button type="submit" class="btn dorne-btn ">Send</button>
                     </div>
                 </div>
             </form>
@@ -144,29 +161,29 @@
     <!-- ****** Footer Area Start ****** -->
     <footer class="dorne-footer-area">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 d-md-flex align-items-center justify-content-between">
-                    <div class="footer-text">
-                        <p>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> All rights reserved | Made with
-                            <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-                                href="https://jkglobalitsolutions.com/" target="_blank">jk global it solutions </a>
-                            &amp; distributed by <a href="index.html" target="_blank">Y SPOT</a>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
-                    </div>
-                    <div class="footer-social-btns">
-                        <a href="#"><i class="fa fa-twitter" aria-haspopup="true"></i></a>
-                        <a href="#"><i class="fa fa-facebook" aria-haspopup="true"></i></a>
-                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    </div>
-                </div>
+          <div class="row">
+            <div class="col-12 d-md-flex align-items-center justify-content-between">
+              <div class="footer-text">
+                <p style="color: white;">
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                  Copyright &copy;
+                  <script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i
+                    class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://jkglobalitsolutions.com/"
+                    target="_blank"><span style="color: rgb(38, 19, 207);">jkglobalitsolutions</span></a> &amp; distributed by <a href="index.html" target="_blank" <span style="color: rgb(38, 19, 207);"></span>Y
+                    SPOT </span></a>
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </p>
+              </div>
+              <div class="footer-social-btns" style="color: rgb(37, 37, 37);">
+                <a href="#"><i class="fa fa-twitter" aria-haspopup="true"></i></a>
+                <a href="#"><i class="fa fa-facebook" aria-haspopup="true"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              </div>
             </div>
+          </div>
         </div>
-    </footer>
+      </footer>
     <!-- ****** Footer Area End ****** -->
 
     <!-- jQuery-2.2.4 js -->
